sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:12: error: type mismatch;
 found   : Unit
 required: Int
    numABouger = longerWay(nbrB, posJABouger)
                          ^NaiveBaseball:21: warning: enclosing method longerWay has result type Unit: return value discarded
    return player2
    ^NaiveBaseball:31: warning: enclosing method longerWay has result type Unit: return value discarded
    return player1
    ^NaiveBaseball:35: warning: enclosing method longerWay has result type Unit: return value discarded
    return player2
    ^